Shoot and Reload Implemented
Implemented shoot and reload functions (undefined)
Deleted Player Rifle class to implement later on.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/Test.Test
-EditorStartupMap=/Game/Levels/Test.Test
+GameDefaultMap=/Game/Levels/TestBed.TestBed
+EditorStartupMap=/Game/Levels/TestBed.TestBed
 GlobalDefaultGameMode=/Game/Player/InputGameMode.InputGameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
